--- a/app/src/main/res/layout/fragment_check_in.xml
+++ b/app/src/main/res/layout/fragment_check_in.xml
@@ -6,8 +6,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginBottom="20dp">
+        android:layout_margin="10dp">
 
         <Button
             android:id="@+id/btnFindWeight"
@@ -81,7 +80,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@id/btnNext"
-            android:text="@string/check_in_scan"/>
+            android:text="@string/check_in_scan"
+            android:layout_marginBottom="10dp"/>
 
     </RelativeLayout>
 </layout>
